--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
+    "postcss": "^8.4.47",
+    "prefixer": "^0.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
